finish pomodo clock

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </div>
 
         <div class="display-countdown">
-            <h2>Session</h2>
+
+            <audio class="ringTone-audio" src="sounds/Short-ringtone-for-notification.mp3"></audio>
+            <h2 class="timer-type">Session</h2>
             <p class="time-remaining">25:00</p>
 
         </div>
